Fixing background image zoom-in on smaller devices

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -149,7 +149,6 @@ ion-icon{
     background-size: cover;
     font-family: 'Kodchasan', sans-serif;
     color:white;
-    position:fixed;
   }
   .container-fluid {
     padding-right:0;
